<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ghosthunterv3.MainActivity" >

    <TextView
        android:id="@+id/gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ghost_hunter"
        android:textSize="22sp"
        android:orientation="vertical" 
        android:layout_centerInParent="true"
        
        />

	<Button 
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:text="@string/play"
	    android:onClick="playButton"
	    android:id="@+id/playButton"
	    android:orientation="vertical"
	    android:layout_below="@id/gameName"
	    android:layout_centerInParent="true"></Button>
	
	<Button
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:text="@string/load"
	    android:onClick="loadButton"
	    android:id="@+id/loadButton"
	    android:orientation="vertical"
	    android:layout_below="@id/playButton"
	    android:layout_centerInParent="true"></Button>
	
	<Button
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:text="@string/about"
	    android:onClick="aboutButton"
	    android:id="@+id/aboutButton"
	    android:orientation="vertical"
	    android:layout_below="@id/loadButton"
	    android:layout_centerInParent="true"></Button>
	
	<Button 
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:text="@string/instructions"
	    android:onClick="instructionButton"
	    android:id="@+id/instructionButton"
	    android:orientation="vertical"
	    android:layout_below="@id/aboutButton"
	    android:layout_centerInParent="true"></Button>
    
	<Button 
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:text="@string/exit"
	    android:onClick="exitButton"
	    android:id="@+id/exitButton"
	    android:orientation="vertical"
	    android:layout_below="@id/instructionButton"
	    android:layout_centerInParent="true"></Button>
	</RelativeLayout>

